--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@capacitor/keyboard": "1.1.3",
     "@capacitor/status-bar": "1.0.6",
     "@ionic/angular": "^6.0.0",
+    "chart.js": "^3.6.2",
+    "devextreme": "^21.2.3",
+    "devextreme-angular": "^21.2.4",
     "ionic-angular": "^3.9.10",
     "ionic-stepper": "^1.1.0",
     "rxjs": "~6.6.0",
@@ -49,6 +52,8 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
+    "devextreme-cli": "latest",
+    "devextreme-themebuilder": "^21.2.3",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
