--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vendor",
   "version": "0.0.1",
   "author": "Ionic Framework",
+  "sideEffects": false,
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
@@ -22,7 +23,7 @@
     "@angular/router": "~12.1.1",
     "@capacitor/android": "3.3.3",
     "@capacitor/app": "1.0.6",
-    "@capacitor/core": "3.3.3",
+    "@capacitor/core": "^3.3.3",
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.1.3",
     "@capacitor/status-bar": "1.0.6",
@@ -46,7 +47,7 @@
     "@angular/compiler": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
     "@angular/language-service": "~12.0.1",
-    "@capacitor/cli": "3.3.3",
+    "@capacitor/cli": "^3.3.3",
     "@ionic/angular-toolkit": "^4.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
